<resources>
    <string name="app_name">Esidem Test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sam Esidem</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="data_warning">This application is by no means collecting
        your sensitive data like password, location etc.
        All information inputed in this application are stored localy in 
        your device. This means we are not sending any of 
        your data to an external storage.  </string>
    <string name="have_fun">Have fun while learning</string>
    <string name="name_text_hint">In order to customize your expirience, let’s know your name.</string>
    <string name="text_hint">eg. Sam Esidem</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_question">QuestionActivity</string>

    <string name="questions_available">Questions available</string>
    <string name="number_of_question_dialogue_title">Select number of questions per turn</string>
    <string name="continue_">Continue</string>
    <string name="english_lang">English Language</string>
    <string name="math">Mathematics</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="economics">Economics</string>
    <string name="commerce">Commerce</string>
    <string name="lit_in_english">Literature in English</string>
    <string name="accounting">Accounting</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="c_r_k">C R K</string>
    <string name="biology">Biology</string>
    <string name="geography">Geography</string>
    <string name="government">Government</string>
    <string name="history">History</string>
    <string name="insurance">Insurance</string>
    <string name="civil_edu">Civil Education</string>
    <string name="is_now_your_preferred_subject">is now your preferred Subject</string>
    <string name="no_internet">Please make sure your device is connected to the internet</string>
    <string name="no_question_available">No questions available</string>
    <string name="classic_test">Classic Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_or_right_to_delete">Swipe left or right to delete</string>
    <string name="_40_chemistry_questions_available">40 Chemistry Questions available</string>
    <string name="sorry_no_questions">Sorry, there are no questions available at the moment</string>
    <string name="test_yourself">Test yourself</string>
    <string name="widget_text">English \n Mathematics \n Chemistry \n Physics \n Biology\n
    Economics\nCommerce\nAccounting\nGovernment\nC R K\nInsurance</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Check out this Application that gives awesome past questions</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Invitation to download Esidem test</string>
    <string name="time_trial_test">time trial test</string>
    <string name="test_results">Test Results</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="test_result_icon">Test Result Icon</string>
    <string name="classic_test_icon">Classic Test Icon</string>
    <string name="time_trial_icon">Time Trial Icon</string>
    <string name="app_logo">App Logo</string>
    <string name="english_language">English Language</string>
    <string name="mathematics">Mathematics</string>
    <string name="civil_education">Civil Education</string>
    <string name="literature_in_english">Literature in English</string>
    <string name="communicate">Communicate</string>
    <string name="share_this_app">Share this App</string>
    <string name="rate_us">Rate Us</string>
    <string name="next">Next</string>
    <string name="next_button">Next Button</string>
    <string name="all_test_result">All Test Result</string>
    <string name="welcome_sam">Welcome Sam</string>
    <string name="time_trial">Time Trial</string>
    <string name="who_developed_this_app">Who developed this App</string>
    <string name="continue_button">Continue button</string>
    <string name="_20">20</string>
    <string name="home">home</string>
    <string name="retake_test">retake test</string>
    <string name="_3_10">3/10</string>
    <string name="no_questions_available">No questions available</string>
    <string name="dismiss">Dismiss</string>
    <string name="about_us">About Us</string>
    <string name="developed_by">Developed by:</string>
    <string name="info_text">This application was developed with the aim of facilitating exams preparation by providing student over 5000 past questions from WASSCCE, NECO, UTME, POST-UTME with over 16 different subject.</string>
    <string name="about_page">About Page</string>
    <string name="sam_esidem" translatable="false">Sam Esidem</string>
    <string name="welcome">Welcome</string>
    <string name="developer_s_image">Developer\'s Image</string>
    <string name="open_developer_s_facebook_page">Open Developer\'s Facebook page</string>
    <string name="open_developer_s_twitter_page">Open Developer\'s Twitter page</string>
    <string name="open_developer_s_linkedin_page">Open Developer\'s LinkedIn page</string>
    <string name="open_developer_s_github_page">Open Developer\'s Github page</string>
    <string name="yes_option"> Yes option </string>
    <string name="was_coorect"> was correct</string>
    <string name="is_wrong"> is wrong, try again</string>
    <string name="no_option">No option </string>
    <string name="no_result_at_the_moment">No Result at the moment</string>
    <string name="date">Date:</string>
    <string name="score">Score:</string>
    <string name="quesion_s">Question(s)</string>
    <string name="by_choosing">By choosing this option, there will be no timing and result</string>
    <string name="welcom_to_classic">Welcome to Classic Test</string>
    <string name="are_you_sure">Are you sure you want to exit your test ?</string>
    <string name="wait">Wait!</string>
    <string name="yes_">Yes</string>
    <string name="no_">No</string>

</resources>
