<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <import type="android.view.View" />
        <variable
            name="handler"
            type="ng.com.techdepo.esidemtest.activities.AboutActivity.ClickHandler"/>
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_centerHorizontal="true"/>
    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/icon"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_1"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/info_text"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto" />
    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/text_1"/>

    <TextView
        android:id="@+id/develop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/developed_by"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_light" />

    <ImageView
        android:id="@+id/sam_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sam_e"
        android:contentDescription="@string/developer_s_image"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/develop"
        />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sam_image"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:text="@string/sam_esidem"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/roboto" />
    <LinearLayout
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_text"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
    <ImageView
        android:id="@+id/fb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/fb"
        android:contentDescription="@string/open_developer_s_facebook_page"
        android:onClick="@{handler::onClick}"
        android:layout_marginEnd="@dimen/activity_vertical_margin"

        android:layout_marginRight="@dimen/activity_vertical_margin" />
    <ImageView
        android:id="@+id/twitter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/open_developer_s_twitter_page"
        android:src="@drawable/twiter"
        android:onClick="@{handler::onClick}"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin" />
    <ImageView
        android:id="@+id/linkin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/linkin"
        android:contentDescription="@string/open_developer_s_linkedin_page"
        android:onClick="@{handler::onClick}"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
       />
    <ImageView
        android:id="@+id/git"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/git_new"
        android:contentDescription="@string/open_developer_s_github_page"
        android:onClick="@{handler::onClick}"
         />

    </LinearLayout>


</RelativeLayout>
</layout>