<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activities.DataActivity">

    <TextView
        android:id="@+id/data_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_warning"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/data_warning2"
        android:layout_below="@+id/data_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/have_fun"
        android:textSize="25sp"/>


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/next_button"
        android:background="@drawable/button_style"
        android:text="@string/next"
        android:onClick="showDialog"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_alignParentRight="true" />

</RelativeLayout>