<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/welcome_sam"
                android:textSize="20sp"
                app:fontFamily="@font/roboto_light" />

            <LinearLayout
                android:id="@+id/time_trial_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/time_trial_test"
                android:background="@drawable/button_style_home"
                android:onClick="timeTrial"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/time_trial_icon"
                    android:src="@mipmap/timer_icon_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/time_trial"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/classic_test_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time_trial_layout"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/classic_test"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_style_home2"
                android:onClick="classicTest"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/classic_test_icon"
                    android:src="@mipmap/classic_icon_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/classic_test"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/classic_test_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:onClick="testResult"
                android:contentDescription="@string/test_results"
                android:background="@drawable/button_style_home"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/test_result_icon"
                    android:src="@mipmap/text_result_icon_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/test_results"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/subject_text_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/number_of_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_40_chemistry_questions_available"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto_light" />

            </LinearLayout>




             </RelativeLayout>
    </ScrollView>
</layout>