<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="question"
            type="ng.com.techdepo.esidemtest.models.Question" />

        <variable
            name="onclick"
            type="ng.com.techdepo.esidemtest.fragments.ClassicTestFragment.ClickHandler" />
    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text=" "
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/roboto" />


            <TextView
                android:id="@+id/section_text_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/question_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text='@{question.section,default="chose the right answer"}'
                android:textColor="@color/colorAccent"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/roboto_light" />

            <TextView
                android:id="@+id/option_1"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_below="@+id/section_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/question_text_background"
                android:contentDescription="@string/option_a"
                android:gravity="center"
                android:onClick="@{onclick::onClick}"
                android:padding="2dp"
                android:text='@{question.options.optionA,default="Emem Jonah"}'
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/roboto" />

            <TextView
                android:id="@+id/option_2"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_below="@+id/option_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/question_text_background"
                android:contentDescription="@string/option_b"
                android:gravity="center"
                android:onClick="@{onclick::onClick}"
                android:padding="2dp"
                android:text='@{question.options.optionB,default="Sam Esidem"}'
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/roboto" />

            <TextView
                android:id="@+id/option_3"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_below="@+id/option_2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/question_text_background"
                android:contentDescription="@string/option_c"
                android:gravity="center"
                android:onClick="@{onclick::onClick}"
                android:padding="2dp"
                android:text='@{question.options.optionC,default="Abasiama Akai"}'
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/roboto" />

            <TextView
                android:id="@+id/option_4"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_below="@+id/option_3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/question_text_background"
                android:contentDescription="@string/option_d"
                android:gravity="center"
                android:onClick="@{onclick::onClick}"
                android:padding="2dp"
                android:text='@{question.options.optionD,default="Mmeyene Akai"}'
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/roboto" />




            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttom_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/button_style"
                android:onClick="@{onclick::onClick}"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginRight="16dp" />


            <TextView
                android:id="@+id/question_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttom_view"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginBottom="10dp"
                android:text='@{question.examtype.toUpperCase() +" "+ question.examyear,default="WASSCE 2005"}'
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:fontFamily="@font/roboto_light" />

            <LinearLayout
                android:id="@+id/buttom_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/question_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:gravity="center"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="6dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/subject_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chemistry"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>