<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      >

    <RelativeLayout
        android:id="@+id/all_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:minHeight="40dp"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" >

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"

                     />

        </LinearLayout>


        <TextView
            android:id="@+id/widget_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:maxLines="4"
            android:text="@string/widget_text"
            app:fontFamily="@font/roboto" />

        <TextView
            android:id="@+id/widget_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_list"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccentDark"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/no_questions_available"
            android:textColor="@color/white"
            app:fontFamily="@font/roboto_light" />

        <TextView
            android:id="@+id/widget_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_a"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/no_questions_available"
            android:textColor="@color/white"
            app:fontFamily="@font/roboto_light" />

        <TextView
            android:id="@+id/widget_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_b"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccentDark"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/no_questions_available"
            android:textColor="@color/white"
            app:fontFamily="@font/roboto_light" />

        <TextView
            android:id="@+id/widget_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_c"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/no_questions_available"
            android:textColor="@color/white"
            app:fontFamily="@font/roboto_light" />

    </RelativeLayout>

</FrameLayout>